# LLaMA-Omni

./: .gitignore  Download_Models.py  README.md  cog.yaml  predict.py  pyproject.toml
omni_speech/: arguments.py  constants.py  conversation.py  utils.py
omni_speech/datasets/: preprocess.py
omni_speech/infer/: convert_jsonl_to_txt.py  infer.py  run.sh
omni_speech/infer/examples/: question.json
omni_speech/model/: __init__.py  builder.py  omni_speech_arch.py
omni_speech/model/language_model/: omni_speech2s_llama.py  omni_speech_llama.py
omni_speech/model/speech_encoder/: builder.py  speech_encoder.py
omni_speech/model/speech_generator/: builder.py  generation.py  speech_generator.py
omni_speech/model/speech_projector/: builder.py  speech_projector.py
omni_speech/serve/: controller.py  gradio_web_server.py  model_worker.py
